# GerberViewer

./: .gitignore  CMakeLists.txt  README.MD  compile_commands.json  generate_build.sh
.cache/clangd/index/: Core.cpp.C2E780CFBA5CECF4.idx  Expression.cpp.6D817723C1DA8B1D.idx  Expression.h.661D2882D9D0FD31.idx  GerberSettings.h.144196747C2F0068.idx  Parser.cpp.42D187E9A6631FE7.idx  Parser.h.3FF8414732A7AB04.idx  main.cpp.943E113B6DD1ECEF.idx
Examples/GerberDataFile/: kleineplatinever11.dri  kleineplatinever11.pmt  kleineplatinever11.smb  kleineplatinever11.sst
GerberDataViewer/: mainwindow.cpp  mainwindow.h  mainwindow.ui
GerberDataViewer/GerberDataLoader/: Core.h  GerberDataLoader.cpp  GerberDataLoader.h  Lexer.cpp  Scanner.cpp  Scanner.h  Tokens.cpp  Tokens.h
GerberParser/: CMakeLists.txt  compile_commands.json
GerberParser/include/: Aperture.h  Cords.h  DeprecatedExpression.h  Drawable.h  Drawer.h  Expression.h  Parser.h  Registers.h  Settings.h
GerberParser/include/Gerber/: Drawable.h  Settings.h
GerberParser/include/Gerber/Instructions/DCodes/: FlashInstruction.h
GerberParser/include/Instructions/: EOFInstruction.h
GerberParser/include/Instructions/DCodes/: DCodesInstruction.h  DrawInstruction.h
GerberParser/src/: Aperture.cpp  Application.cpp  Cords.cpp  Drawer.cpp  Parser.cpp  Registers.cpp  Settings.cpp
GerberParser/tests/: lastLog  test_Aperture.cpp  test_Registers.cpp
GerberViewer/GerberViewerGUIinQT/GerberViewer/: CMakeLists.txt  clickablegraphics.cpp  clickablegraphics.h  clickableview.cpp  clickableview.h  custom_view.cpp  custom_view.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mygraphicsview.h  notatnik
GerberViewer/GerberViewerQT/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui
GerberViewerQT/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Python/pygerbv/: exampleFilePygerber.py  runpygerbv.py
Python/pyregex/: main.py
build-GerberDataViewer-Desktop_Qt_6_6_0_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  GerberDataViewer  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-GerberDataViewer-Desktop_Qt_6_6_0_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-2d6139c1fa210a2bc5f0.json  cmakeFiles-v1-7eda9d6f1bd7a2efa33d.json  codemodel-v2-d966f8374056557e59f6.json  directory-.-Debug-421764b97bc11ead64a0.json  index-2023-11-13T20-32-57-0751.json  target-GerberDataViewer-Debug-f5591686e814471b6d38.json  target-GerberDataViewer_autogen-Debug-6480d82a1f6043057e3d.json  target-GerberDataViewer_autogen_timestamp_deps-Debug-2948d81d235dfeb23267.json
build-GerberDataViewer-Desktop_Qt_6_6_0_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
build-GerberDataViewer-Desktop_Qt_6_6_0_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-GerberDataViewer-Desktop_Qt_6_6_0_GCC_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QApplication.8C04979092791FBA.idx  QMainWindow.89FC36646CDE007D.idx  __stddef_max_align_t.h.CE60196FA6D70D30.idx  align.h.CA541990FDBB1FB6.idx  alloc_traits.h.7BF9907E0CAD82C6.idx  alloca.h.B3C3404035C15EA6.idx  allocated_ptr.h.D6AB64EFE785DE55.idx  array.4596776D66621060.idx  atomic.2F1B343CE7D1F26B.idx  atomic_base.h.F5BF58965DFD6F9F.idx  auto_ptr.h.5C147DA2E0A6C829.idx  basic_string.h.F235B986BAF28D09.idx  basic_string.tcc.70A554B47DFBB74A.idx  bessel_function.tcc.070083E15ED82A96.idx  bit.6662B9BEDBB9209D.idx  charconv.h.FBAECB1D29DAEF83.idx  chrono.h.3060D8C3CCE25881.idx  climits.7AE505C25B969555.idx  cmath.6FB98E931CB65042.idx  cstddef.EA5A56D02130A3B5.idx  cstdint.EBD30FB8CEEC127B.idx  cstring.997D92457AB34F04.idx  cxxabi_init_exception.h.85D3FB672BCC7CD6.idx  erase_if.h.C7ACC42DD48AAB03.idx  exception.h.6CB335D0208C5E5E.idx  features.h.839A4F3F7C9A4375.idx  functional.52B8A0751CE643DC.idx  gamma.tcc.124D81F842A9A3CD.idx  hashtable.h.15A6F99C50F7070B.idx  hashtable_policy.h.5C10B15B309487D7.idx  limits.h.1E64567471CB0BDC.idx  locale.h.5F1EA2E91D0CD92F.idx  main.cpp.430C5F5F25B65572.idx  mainwindow.cpp.5732AC1802B7EE22.idx  mainwindow.h.411963892CED3AB3.idx  math.h.01C27C5330238AC3.idx  mathcalls.h.0D6A5334AC3EFF18.idx  memory_resource.h.A3582D87877B3B1B.idx  modified_bessel_func.tcc.E652D0ED88D05D82.idx  new_allocator.h.942CAD55AC6558AB.idx  (+207 more)
build-GerberDataViewer-Desktop_Qt_6_6_0_GCC_64bit-Debug/GerberDataViewer_autogen/: deps
build-GerberDataViewer-Desktop_Qt_6_6_0_GCC_64bit-Debug/GerberDataViewer_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-GerberDataViewer-Desktop_Qt_6_6_0_GCC_64bit-Debug/GerberDataViewer_autogen/include/: ui_mainwindow.h
build-gerbv-Desktop_Qt_6_6_0_GCC_64bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-gerbv-Desktop_Qt_6_6_0_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
build-gerbv-Desktop_Qt_6_6_0_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
data/: grep_test
data/Examples/: LPESTE.BRD.newold  a.out  main.cpp
data/Examples/GerberDataFile/: kleineplatinever11.pan  kleineplatinever11.smt
data/GerberDataFile/: kleineplatinever11.bot  kleineplatinever11.dri  kleineplatinever11.nc  kleineplatinever11.top  kleineplatinever11.vsr
data/SourceCodeFile/: LPESTE.BRD
data/settings/: setting.csv
docs/: howTOBuild  notes
docs/Examples/: LPESTE.BRD
docs/Examples/GerberDataFile/: kleineplatinever11.rpt
docs/GerberDataViewer/: CMakeLists.txt
docs/GerberDataViewer/GerberDataLoader/: ErrorHandler.h  GerberDataLoader.h  Scanner.h  Tokens.h
docs/GerberDataViewer/GerberDataLoader/new/: Parser.h
docs/gtest/: CMakeLists.txt  README.md  example_result  myMath.cpp  test_myMath.cpp
docs/regex/: a.out  regex_example.cpp
gerbv/: CMakeLists.txt
include/: Aperture.h  Cords.h  Drawer.h  Expression.h  GerberSettings.h  Parser.h  Register.h  Registers.h  Settings.h
include/Instructions/: Instruction.h  SelectAP.h
include/Instructions/DCodes/: MoveInstruction.h
src/: Aperture.cpp  Application.cpp  Cords.cpp  Core.cpp  Expression.cpp  GerberSettings.cpp  Parser.cpp  Registers.cpp  Settings.cpp  main.cpp  strManipulation.cpp
tests/: test_Aperture.cpp  test_DCODESInstructions.cpp  test_Settings.cpp
(+9 files in other folders)
